Fix critical bug with 'BOOK NOW' button on consulation on mobile

--- a/src/pages/Journey/Consultation/mobile/index.styl
+++ b/src/pages/Journey/Consultation/mobile/index.styl
@@ -7,7 +7,7 @@
     height 100%
 
     .header
-      position sticky
+      position relative
 
     .consult-bg
       width 100vw
@@ -70,7 +70,7 @@
             font-weight 600
 
     .mail-section
-      height 100vh
+      height auto
       margin 0
       flex-shrink 0
       width 100%
